# swarmstate

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  results.json  run.py
examples/: README.md  state_portability.py  support_triage.py
launch/: POST.md
python/swarmstate/: __init__.py  _core.pyi  observability.py
python/swarmstate/backends/: __init__.py  disk.py  postgres.py  redis.py
python/swarmstate/integrations/: __init__.py  crewai.py  langgraph.py
rust/src/: codec.rs  condition.rs  graph.rs  lib.rs  store.rs
tests/: test_batch.py  test_codec.py  test_crewai.py  test_disk.py  test_examples.py  test_freethreaded.py  test_graph.py  test_langgraph.py  test_langgraph_contract.py  test_observability.py  test_postgres.py  test_redis.py  test_smoke.py  test_store.py
