[package]
name = "swarmstate_core"
version = "0.8.0"
edition = "2021"
description = "Rust core for swarmstate: state & checkpointing backend for multi-agent systems"
license = "MIT"
repository = "https://github.com/swarmstate/swarmstate"
readme = "README.md"

[lib]
name = "_core"
# Mixed maturin layout: Rust sources live under rust/src, Python under python/.
path = "rust/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39"] }
rmpv = "1.3"          # msgpack Value model — stable, language-agnostic codec
im = "15.1"           # persistent/immutable maps — O(1) structural-sharing snapshots

[dev-dependencies]
# Enables embedding a Python interpreter for `cargo test`.
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
