[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "swarmstate"
version = "0.8.0"
description = "Drop-in state backend for LangGraph, CrewAI & custom agent loops — Rust core, framework-agnostic, built for production."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "swarmstate" }]
keywords = ["agents", "langgraph", "crewai", "checkpoint", "state", "rust", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.70"]
redis = ["redis>=5.0", "msgpack>=1.0"]
disk = ["msgpack>=1.0"]
postgres = ["psycopg[binary]>=3.1", "msgpack>=1.0"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]
dev = ["pytest>=8.0", "ruff>=0.6"]
bench = ["swarmstate[langgraph]", "langgraph-checkpoint-sqlite>=2.0", "matplotlib>=3.8"]
all = ["swarmstate[langgraph,crewai,redis,disk,postgres]"]

[project.urls]
Homepage = "https://github.com/swarmstate/swarmstate"
Repository = "https://github.com/swarmstate/swarmstate"
Documentation = "https://swarmstate.github.io"

[tool.maturin]
python-source = "python"
module-name = "swarmstate._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
